exports[`board reducer ADD_MARK adds the provided mark on the provided position 1`] = `
Array [
  "X",
  "",
  "",
  "",
  "",
  "",
  "",
  "",
  "",
]
`;

exports[`board reducer ADD_MARK adds the provided mark on the provided position 2`] = `
Array [
  "X",
  "O",
  "",
  "",
  "",
  "",
  "",
  "",
  "",
]
`;

exports[`board reducer ADD_MARK adds the provided mark on the provided position 3`] = `
Array [
  "X",
  "O",
  "X",
  "",
  "",
  "",
  "",
  "",
  "",
]
`;

exports[`board reducer ADD_MARK adds the provided mark on the provided position 4`] = `
Array [
  "X",
  "O",
  "X",
  "O",
  "",
  "",
  "",
  "",
  "",
]
`;

exports[`board reducer ADD_MARK adds the provided mark on the provided position 5`] = `
Array [
  "X",
  "O",
  "X",
  "O",
  "X",
  "",
  "",
  "",
  "",
]
`;

exports[`board reducer ADD_MARK adds the provided mark on the provided position 6`] = `
Array [
  "X",
  "O",
  "X",
  "O",
  "X",
  "O",
  "",
  "",
  "",
]
`;

exports[`board reducer ADD_MARK adds the provided mark on the provided position 7`] = `
Array [
  "X",
  "O",
  "X",
  "O",
  "X",
  "O",
  "X",
  "",
  "",
]
`;

exports[`board reducer ADD_MARK adds the provided mark on the provided position 8`] = `
Array [
  "X",
  "O",
  "X",
  "O",
  "X",
  "O",
  "X",
  "O",
  "",
]
`;

exports[`board reducer ADD_MARK adds the provided mark on the provided position 9`] = `
Array [
  "X",
  "O",
  "X",
  "O",
  "X",
  "O",
  "X",
  "O",
  "X",
]
`;
